[package]
name = "raptor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
description = "Build disk images, file archives and bootable isos with a simple, docker-inspired syntax"
categories = ["config", "command-line-utilities", "virtualization", "template-engine"]
repository = "https://github.com/chrivers/raptor"
keywords = ["devops", "reproducible", "disk-image", "generation"]
authors = ["Christian Iversen <ci@iversenit.dk>"]

[[test]]
name = "diagnostic"
harness = false

[[bin]]
name = "raptor"
test = false

[[bin]]
name = "nspawn-test"
test = false

[[bin]]
name = "debootwrap"
test = false

[[bin]]
name = "nspawn-client"
test = false

[lints.rust]
unstable_features = "forbid"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all         = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
module_inception        = "allow"
similar_names           = "allow"

[dependencies]
annotate-snippets = "0.11.4"
anstream = { version = "0.6.18", default-features = false, features = ["auto"] }
bincode = "1.3.3"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
camino-tempfile = "1.1.1"
clap = { version = "4.5.21", features = ["cargo", "derive", "string"] }
colog = "1.3.0"
colored = "2.1.0"
indicatif = { version = "0.17.9", features = ["improved_unicode"] }
itertools = "0.13.0"
log = "0.4.22"
minijinja = { version = "2.5.0", features = ["custom_syntax", "debug", "loader", "loop_controls"] }
nix = { version = "0.29.0", features = ["fs", "user"] }
pest = { version = "2.7.14", features = ["pretty-print"] }
pest_consume = "1.1.3"
pest_derive = "2.7.14"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_variant = "0.1.3"
serde_yml = "0.0.12"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
libtest-mimic = "0.8.1"
