[package]
name = "raptor"
version = "0.1.0"
description = "Build disk images, file archives and bootable isos with a simple, docker-inspired syntax"

readme.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["config", "command-line-utilities", "virtualization", "template-engine"]
repository = "https://github.com/chrivers/raptor"
keywords = ["devops", "reproducible", "disk-image", "generation"]
authors = ["Christian Iversen <ci@iversenit.dk>"]

[workspace]
members = [
    "crates/dregistry",
]

[[test]]
name = "diagnostic"
harness = false

[[bin]]
name = "raptor"
test = false

[[bin]]
name = "debootwrap"
test = false

[[bin]]
name = "falcon-test"
test = false

[[bin]]
name = "falcon"
test = false

[lints]
workspace = true

[workspace.lints.rust]
unstable_features = "forbid"
unused_lifetimes = "warn"
unused_qualifications = "warn"
mismatched_lifetime_syntaxes = "allow"

[workspace.lints.clippy]
all         = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
module_inception        = "allow"
similar_names           = "allow"

[workspace.dependencies]
dregistry = { version = "0.1.0", path = "crates/dregistry" }

annotate-snippets = "0.11.4"
anstream = { version = "0.6.18", default-features = false }
anstyle = { version = "1.0.10", default-features = false }
bincode = "2.0.1"
camino = "1.1.11"
camino-tempfile = "1.1.1"
clap = "4.5.47"
colog = "1.3.0"
colored = "2.1.0"
hex = "0.4.3"
itertools = "0.13.0"
libtest-mimic = "0.8.1"
log = "0.4.27"
minijinja = "2.5.0"
nix = "0.30.1"
pest = "2.8.1"
pest_consume = "1.1.3"
pest_derive = "2.7.14"
reqwest = { version = "0.12.23", default-features = false }
serde = "1.0.219"
serde_json = "1.0.142"
serde_variant = "0.1.3"
serde_yml = "0.0.12"
thiserror = "2.0.15"
uuid = "1.11.0"
indicatif = "0.18.0"

[dependencies]
annotate-snippets = { workspace = true }
anstream = { workspace = true, features = ["auto"] }
anstyle = { workspace = true, features = ["std"] }
bincode = { workspace = true, features = ["serde"] }
camino = { workspace = true, features = ["serde", "serde1"] }
camino-tempfile = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "string"] }
colog = { workspace = true }
colored = { workspace = true }
dregistry = { workspace = true }
indicatif = { workspace = true, features = ["improved_unicode"] }
itertools = { workspace = true }
log = { workspace = true }
minijinja = { workspace = true, features = ["custom_syntax", "debug", "loader", "loop_controls"] }
nix = { workspace = true, features = ["fs", "user"] }
pest = { workspace = true, features = ["pretty-print"] }
pest_consume = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_variant = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
libtest-mimic = { workspace = true }
