[package]
name = "dregistry"
version = "0.1.0"
description = "Docker registry client that supports downloading images from index.docker.io, ghcr.io, and others."

edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
camino = "1.1.11"
hex = "0.4.3"
indicatif = "0.18.0"
log = "0.4.27"
pest = "2.8.1"
pest_consume = "1.1.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"

[dev-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colog = "1.3.0"
log = "0.4.27"
