[package]
name = "dregistry"
version = "0.1.0"
description = "Docker registry client that supports downloading images from index.docker.io, ghcr.io, and others."

edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
camino = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
pest = { workspace = true }
pest_consume = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
colog = { workspace = true }
log = { workspace = true }
