[package]
name = "raptor-parser"
version = "0.1.0"
description = "Parser for Raptor build files (.rapt & .rinc)"

edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
pest = { workspace = true }
pest_consume = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
colored = { workspace = true }
minijinja = { workspace = true }
logos = { workspace = true, features = ["forbid_unsafe"] }

[lints]
workspace = true

[dev-dependencies]
colog.workspace = true
log.workspace = true
